syntax = "proto3";

package pb;

option go_package = "./pb";

message LoginUserRequest{
    string username = 1;
    string password = 2;
}

message LoginUserResponse{
    string access_token = 1;
	string refresh_token = 2;
	string session_id    = 3;
}